refactor: 코드 리뷰 개선 사항 반영   - ScanQueueService: RuntimeException을 BusinessException으로 교체, QUEUE_FULL 에러 코드 추가   - ScanPartitionService: @Component를 @Service로 통일   - ScanAreaDataInfoRepository: N+1 개선 후 미사용된 단건 조회 메서드 제거   - ScanQueryService: Path API 일관성 정리 및 경로 탐색 공격 방어 로직 추가   - GradeDto: 숙도 등급 범위(0~3) 유효성 검증 추가